iniciando o desenvolvimento do carrosel

--- a/index.html
+++ b/index.html
@@ -50,5 +50,8 @@
         <p class="banner__texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
         <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
     </section>
+    <section class="carrosel">
+        <h2 class="carrosel__titulo">Novos lançamentos</h2>
+    </section>
 </body>
 </html>
