--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/styles.css">
@@ -39,11 +40,50 @@
                 </li>
             </ul>
             <img src="assets/img/Logo.svg" alt="logo da AluraBooks" class="container__imagem">
+            <h1 class="container__titulo"><b class="container__titulo--negrito">Alura</b>books</h1>
         </div>
+
+        <ul class="opcoes">
+            <input type="checkbox" name="opcoes-menu" id="opcoes-menu" class="opcoes__botao">
+            <label for="opcoes-menu">
+                <li class="opcoes__item">Categorias</li>
+            </label>
+            <ul class="lista__menu">
+                <li class="lista__menu--item">
+                    <a href="#" class="lista__menu--link">Programação</a>
+                </li>
+                <li class="lista__menu--item">
+                    <a href="" class="lista__menu--link">Front-End</a>
+                </li>
+                <li class="lista__menu--item">
+                    <a href="" class="lista__menu--link">Infraestrutura</a>
+                </li>
+                <li class="lista__menu--item">
+                    <a href="" class="lista__menu--link">Business</a>
+                </li>
+                <li class="lista__menu--item">
+                    <a href="" class="lista__menu--link">Design & UX</a>
+                </li>
+            </ul>
+            
+            <li class="opcoes__item">
+                <a href="" class="opcoes__link">Favoritos</a>
+            </li>
+            <li class="opcoes__item">
+                <a href="" class="opcoes__link">Minha sstante</a>
+            </li>
+        </ul>
+
         <div class="container">
-            <a href="#"><img src="assets/img/Favoritos.svg" alt="Botão de meus favoritos" class="container__imagem"></a>
-            <a href="#"><img src="assets/img/Compras.svg" alt="Botão do carrinho de Compras" class="container__imagem"></a>
-            <a href="#"><img src="assets/img/Usuário.svg" alt="Botão do meu perfil" class="container__imagem"></a>
+            <a href="#">
+                <img src="assets/img/Favoritos.svg" alt="Botão de meus favoritos" class="container__imagem container__imagem--transparente">
+            </a>
+            <a href="#">
+                <img src="assets/img/Compras.svg" alt="Botão do carrinho de Compras" class="container__imagem">
+            </a>
+            <a href="#">
+                <img src="assets/img/Usuário.svg" alt="Botão do meu perfil" class="container__imagem">
+            </a>
         </div>        
     </header>
     <section class="banner">
