--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             <label for="opcoes-menu">
                 <li class="opcoes__item">Categorias</li>
             </label>
+            
             <ul class="lista__menu">
                 <li class="lista__menu--item">
                     <a href="#" class="lista__menu--link">Programação</a>
@@ -221,8 +222,10 @@
         </ul>
     </section>
     <section class="contato">
-        <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
-        <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros.</p>
+        <div class="contato__descricao">
+            <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
+            <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros.</p>
+        </div>
         <input type="email" class="contato__email" name="" id="" placeholder="Cadastre seu e-mail">
     </section>
 
