Finalizando o desenvolvimendo do rodape para telas min-width: 1024px

--- a/index.html
+++ b/index.html
@@ -233,6 +233,82 @@
     
     <footer class="rodape">
         <h2 class="rodape__titulo">Grupo Alura</h1>
+
+            <ul class="lista__rodape">
+                <li class="lista__rodape--titulo">Educação</li>
+                <li class="lista__rodape--item">
+                    <img src="assets/img/Caelum.svg" alt="Logo da Caelum">
+                    <a href="#" class="lista__rodape--link">Caelum</a>
+                </li>
+                <li class="lista__rodape--item">
+                    <img src="assets/img/CasaDoCodigo.svg" alt="Logo da casa do código">
+                    <a href="#" class="lista__rodape--link">Casa do Código</a>
+                </li>
+            </ul>
+
+            <ul class="lista__rodape">
+                <li class="lista__rodape--titulo">Educação online</li>
+                <li class="lista__rodape--item">
+                    <img src="assets/img/Alura.svg" alt="Logo da Alura">
+                    <a href="#" class="lista__rodape--link">Alura</a>
+                </li>
+                <li class="lista__rodape--item">
+                    <img src="assets/img/AluraEmpresas.svg" alt="Logo da Alura para empresas">
+                    <a href="#" class="lista__rodape--link">Alura Para Empresas</a>
+                </li>
+                <li class="lista__rodape--item">
+                    <img src="assets/img/AluraLATAM.svg" alt="Logo da Alura LATAM">
+                    <a href="#" class="lista__rodape--link">Alura LATAM</a>
+                </li>
+                <li class="lista__rodape--item">
+                    <img src="assets/img/AluraStart.svg" alt="Logo da Alura Start">
+                    <a href="#" class="lista__rodape--link">Alura Start</a>
+                </li>
+                <li class="lista__rodape--item">
+                    <img src="assets/img/MusicDot.svg" alt="Logo do MusicDot">
+                    <a href="#" class="lista__rodape--link">MusicDot</a>
+                </li>
+                <li class="lista__rodape--item">
+                    <img src="assets/img/AluraLingua.svg" alt="Logo da Alura língua">
+                    <a href="#" class="lista__rodape--link">Alura Língua</a>
+                </li>
+                <li class="lista__rodape--item">
+                    <img src="assets/img/PM3.svg" alt="Logo do PM3">
+                    <a href="#" class="lista__rodape--link">PM3</a>
+                </li>
+            </ul>
+
+            <ul class="lista__rodape">
+                <li class="lista__rodape--titulo">Comunidade</li>
+                <li class="lista__rodape--item">
+                    <img src="assets/img/HipstersTech.svg" alt="Logo da Hipsters ponto Tech">
+                    <a href="#" class="lista__rodape--link">Hipsters ponto Tech</a>
+                </li>
+                <li class="lista__rodape--item">
+                    <img src="assets/img/ScubaDev.svg" alt="Logo da Scuba Dev">
+                    <a href="#" class="lista__rodape--link">Scuba Dev</a>
+                </li>
+                <li class="lista__rodape--item">
+                    <img src="assets/img/LayersTech.svg" alt="Layers ponto Tech">
+                    <a href="#" class="lista__rodape--link">Layers ponto Tech</a>
+                </li>
+                <li class="lista__rodape--item">
+                    <img src="assets/img/LikeABoss.svg" alt="Logo da Like a Boss">
+                    <a href="#" class="lista__rodape--link">Like a Boss</a>
+                </li>
+                <li class="lista__rodape--item">
+                    <img src="assets/img/CarreiraSemFronteira.svg" alt="Logo do Carreira sem Fronteira">
+                    <a href="#" class="lista__rodape--link">Carreira sem Fronteira</a>
+                </li>
+                <li class="lista__rodape--item">
+                    <img src="assets/img/HipstersJobs.svg" alt="Logo da Hipsters ponto Jobs">
+                    <a href="#" class="lista__rodape--link">Hipsters ponto Jobs</a>
+                </li>
+                <li class="lista__rodape--item">
+                    <img src="assets/img/GUJ.svg" alt="Logo do GUJ">
+                    <a href="#" class="lista__rodape--link">GUJ</a>
+                </li>
+            </ul>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
